Fixed endpoints. Need to check for conflict booking.
