# node_api/routes/doctor.js
@@ -1,6 +1,6 @@
 import express from 'express';
 const doctorRouter= express.Router();
-import { getDoctorprofile,getDoctorNamebyId,getDoctorAppointments,createDoctorAppointment,updateAppointmentStatus,cancelDoctorAppointment,updateDoctorAvailabilityById,updateDoctorProfile,updateAvailabilityStatus } from '../controllers/doctorControllers.js';
+import { getDoctorprofile,getDoctorNamebyId,getDoctorAppointments,updateAppointmentStatus,cancelDoctorAppointment,updateDoctorProfile,updateAvailabilityStatus,getAvailableSlots } from '../controllers/doctorControllers.js';
 
 doctorRouter.get("/me",(req,res)=> {
     /*
@@ -27,9 +27,8 @@ doctorRouter.get("/profile/:did",getDoctorprofile);
 doctorRouter.get("/name/:did",getDoctorNamebyId);
 doctorRouter.patch("/updateProfile/",updateDoctorProfile);
 doctorRouter.get("/appointments/",getDoctorAppointments);
-doctorRouter.post("/createAppointment/:aid",createDoctorAppointment);
 doctorRouter.put("/updateAppointmentStatus/:aid",updateAppointmentStatus);
 doctorRouter.delete("/deleteAppointment/:aid",cancelDoctorAppointment);
-doctorRouter.patch("/updateAvailability/:did",updateDoctorAvailabilityById);
+doctorRouter.get("/getAvailableSlots/:did",getAvailableSlots);
 doctorRouter.patch("/updateAvailabilityStatus/:did",updateAvailabilityStatus);
 export default doctorRouter;
